--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -21,5 +21,6 @@ jobs:
 
       - name: Run Klocwork kwcheck
         run: |
+          D:\kw_cmd_24.4\bin\kwinject make
           D:\kw_cmd_24.4\bin\kwcheck create --url http://192.168.0.127:8082/Demo --project-dir kwps
           D:\kw_cmd_24.4\bin\kwcheck run --url http://192.168.0.127:8082/Demo --project-dir kwps
