--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Print current user
-        shell: pwsh
+        shell: cmd
         run: |
           whoami
 
