--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -27,20 +27,13 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
-      - name: Debug: Network connectivity check to Klocwork server
+      - name: Print current user
         shell: cmd
-        run: |
-          echo ======= IP Configuration =======
-          ipconfig
+        run: whoami
 
-          echo ======= Pinging Klocwork Server =======
-          ping 192.168.0.127 -n 4
-
-          echo ======= CURL Test to 8082 =======
-          curl.exe -v http://192.168.0.127:8082
-
-          echo ======= Test License Port (27000) =======
-          powershell -Command "Test-NetConnection -ComputerName 192.168.0.127 -Port 27000"
+      - name: Test connectivity to Klocwork server
+        shell: cmd
+        run: curl.exe -v %KW_URL%
 
       - name: Clean previous Klocwork state
         shell: cmd
