--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -15,6 +15,7 @@ jobs:
     name: Run Klocwork Analysis
 
     env:
+      KLOCWORK_LTOKEN=C:\Users\palan\.klocwork\ltoken
       KW_URL: http://192.168.0.127:8082
       KW_PROJECT: cxx_testsuite
       KW_USER: ${{ secrets.KW_USER }}
@@ -63,11 +64,9 @@ jobs:
           if exist %KW_REPORT_DIR% rmdir /s /q %KW_REPORT_DIR%
 
           echo Starting build with kwinject...
-          mkdir Build
-          cd Build
-
+        
           cmake ..
-          "%KLOCWORK_BIN%\kwinject.exe" -- nmake
+          "%KLOCWORK_BIN%\kwinject.exe" -- make
 
           echo Running Klocwork static analysis...
           set KLOCWORK_LTOKEN=C:\Users\palan\.klocwork\ltoken
