--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -15,7 +15,7 @@ jobs:
     name: Run Klocwork Analysis
 
     env:
-      KLOCWORK_LTOKEN=C:\Users\palan\.klocwork\ltoken
+      KLOCWORK_LTOKEN: C:\Users\palan\.klocwork\ltoken
       KW_URL: http://192.168.0.127:8082
       KW_PROJECT: cxx_testsuite
       KW_USER: ${{ secrets.KW_USER }}
