--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -46,7 +46,7 @@ jobs:
         shell: cmd
         run: |
           set KWAUTH_NONINTERACTIVE=true
-          "%KLOCWORK_BIN%\kwauth.exe" --url "%KW_URL%" --user "%KW_USER%" --password "%KW_PASS%"
+          "%KLOCWORK_BIN%\kwauth.exe" --url "%KW_URL%"
 
       - name: Run Klocwork CLI analysis
         shell: cmd
