--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -18,8 +18,8 @@ jobs:
       KLOCWORK_LTOKEN: C:\Users\palan\.klocwork\ltoken
       KW_URL: http://192.168.0.127:8082
       KW_PROJECT: cxx_testsuite
-      KW_USER: ${{ secrets.KW_USER }}
-      KW_PASS: ${{ secrets.KW_PASS }}
+      KW_USER: admin
+      KW_PASS: meteonic12
       KW_REPORT_NAME: cxx_testsuite_report
       KW_REPORT_DIR: reports
       KLOCWORK_BIN: D:\kw_cmd_24.4\bin
