--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -64,16 +64,9 @@ jobs:
           if exist %KW_REPORT_DIR% rmdir /s /q %KW_REPORT_DIR%
 
           echo Starting build with kwinject...
-         
 
-          cmake ..
           "%KLOCWORK_BIN%\kwinject.exe" make
-
-          echo Running Klocwork static analysis...
-          set KLOCWORK_LTOKEN=%KLOCWORK_LTOKEN%
-          cd /d %GITHUB_WORKSPACE%
-
-          "%KLOCWORK_BIN%\kwcheck.exe" create --url "%KW_URL%" --project "%KW_PROJECT%"
+          "%KLOCWORK_BIN%\kwcheck.exe" create
           "%KLOCWORK_BIN%\kwcheck.exe" set license.host=192.168.0.127 license.port=27000
           "%KLOCWORK_BIN%\kwcheck.exe" run -pd .kwlp -b kwinject.out
           "%KLOCWORK_BIN%\kwcheck.exe" list -y -l -F detailed -pd .kwlp > "%KW_REPORT_NAME%.txt"
