--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -21,6 +21,8 @@ jobs:
       KW_REPORT_NAME: cxx_testsuite_report
       KW_REPORT_DIR: reports
       KLOCWORK_BIN: D:\kw_cmd_24.4\bin
+      KW_USER: ${{ secrets.KW_USER }}
+      KW_PASS: ${{ secrets.KW_PASS }}
 
     steps:
       - name: Checkout source code
@@ -34,11 +36,25 @@ jobs:
         shell: cmd
         run: curl.exe -v %KW_URL%
 
+      - name: Validate required secrets
+        shell: cmd
+        run: |
+          if "%KW_USER%"=="" (
+            echo ❌ KW_USER is empty. Check GitHub Secrets configuration.
+            exit /b 1
+          )
+          if "%KW_PASS%"=="" (
+            echo ❌ KW_PASS is empty. Check GitHub Secrets configuration.
+            exit /b 1
+          )
+          echo ✅ Secrets are set. Proceeding...
+
       - name: Clean previous Klocwork state
         shell: cmd
         run: |
           if exist "%GITHUB_WORKSPACE%\.kwps" rmdir /s /q "%GITHUB_WORKSPACE%\.kwps"
           if exist "%GITHUB_WORKSPACE%\Build" rmdir /s /q "%GITHUB_WORKSPACE%\Build"
+
       - name: Run Klocwork CLI analysis
         shell: cmd
         run: |
@@ -55,9 +71,10 @@ jobs:
           if exist %KW_REPORT_DIR% rmdir /s /q %KW_REPORT_DIR%
 
           echo Starting build with kwinject...
-
           "%KLOCWORK_BIN%\kwinject.exe" make
-          "%KLOCWORK_BIN%\kwcheck.exe" create
+
+          echo Running Klocwork static analysis...
+          "%KLOCWORK_BIN%\kwcheck.exe" create --url %KW_URL% --project %KW_PROJECT%
           "%KLOCWORK_BIN%\kwcheck.exe" set license.host=192.168.0.127 license.port=27000
           "%KLOCWORK_BIN%\kwcheck.exe" run -pd .kwlp -b kwinject.out
           "%KLOCWORK_BIN%\kwcheck.exe" list -y -l -F detailed -pd .kwlp > "%KW_REPORT_NAME%.txt"
