--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -17,12 +17,10 @@ jobs:
     env:
       KLOCWORK_LTOKEN: C:\Users\palan\.klocwork\ltoken
       KW_URL: http://192.168.0.127:8082
-      KW_PROJECT: Demo
+      KW_PROJECT: cxx_testsuite
       KW_REPORT_NAME: cxx_testsuite_report
       KW_REPORT_DIR: reports
       KLOCWORK_BIN: D:\kw_cmd_24.4\bin
-      KW_USER: ${{ secrets.KW_USER }}
-      KW_PASS: ${{ secrets.KW_PASS }}
 
     steps:
       - name: Checkout source code
@@ -36,46 +34,11 @@ jobs:
         shell: cmd
         run: curl.exe -v %KW_URL%
 
-      - name: Validate required secrets
-        shell: cmd
-        run: |
-          if "%KW_USER%"=="" (
-            echo ❌ KW_USER is empty. Check GitHub Secrets configuration.
-            exit /b 1
-          )
-          if "%KW_PASS%"=="" (
-            echo ❌ KW_PASS is empty. Check GitHub Secrets configuration.
-            exit /b 1
-          )
-          echo ✅ Secrets are set. Proceeding...
-
-      - name: Setup .kwauth for Klocwork authentication
-        shell: cmd
-        run: |
-          setlocal EnableDelayedExpansion
-          echo Creating .kwauth file for non-interactive login...
-          set KWAUTH_DIR=%USERPROFILE%\.klocwork
-          if exist "!KWAUTH_DIR!" rmdir /s /q "!KWAUTH_DIR!"
-          mkdir "!KWAUTH_DIR!"
-
-          > "!KWAUTH_DIR!\.kwauth" echo {
-          >> "!KWAUTH_DIR!\.kwauth" echo   "users": [
-          >> "!KWAUTH_DIR!\.kwauth" echo     {
-          >> "!KWAUTH_DIR!\.kwauth" echo       "url": "%KW_URL%",
-          >> "!KWAUTH_DIR!\.kwauth" echo       "user": "%KW_USER%",
-          >> "!KWAUTH_DIR!\.kwauth" echo       "password": "%KW_PASS%"
-          >> "!KWAUTH_DIR!\.kwauth" echo     }
-          >> "!KWAUTH_DIR!\.kwauth" echo   ]
-          >> "!KWAUTH_DIR!\.kwauth" echo }
-
-          echo ✅ .kwauth setup complete.
-
       - name: Clean previous Klocwork state
         shell: cmd
         run: |
           if exist "%GITHUB_WORKSPACE%\.kwps" rmdir /s /q "%GITHUB_WORKSPACE%\.kwps"
           if exist "%GITHUB_WORKSPACE%\Build" rmdir /s /q "%GITHUB_WORKSPACE%\Build"
-
       - name: Run Klocwork CLI analysis
         shell: cmd
         run: |
@@ -92,12 +55,8 @@ jobs:
           if exist %KW_REPORT_DIR% rmdir /s /q %KW_REPORT_DIR%
 
           echo Starting build with kwinject...
-         
+
           "%KLOCWORK_BIN%\kwinject.exe" make
-
-          echo Running Klocwork static analysis...
-          cd /d %GITHUB_WORKSPACE%
-
           "%KLOCWORK_BIN%\kwcheck.exe" create --url %KW_URL%/%KW_PROJECT%
           "%KLOCWORK_BIN%\kwcheck.exe" set license.host=192.168.0.127 license.port=27000
           "%KLOCWORK_BIN%\kwcheck.exe" run -pd .kwlp -b kwinject.out
