--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -21,7 +21,7 @@ jobs:
       KW_PASS: ${{ secrets.KW_PASS }}
       KW_REPORT_NAME: cxx_testsuite_report
       KW_REPORT_DIR: reports
-      KLOCWORK_LTOKEN: C:\Users\palan\.klocwork\.kwauth
+      KLOCWORK_LTOKEN: C:\Users\palan\.klocwork\ltoken
       KLOCWORK_BIN: D:\kw_cmd_24.4\bin
 
     steps:
@@ -49,26 +49,12 @@ jobs:
           )
           echo ✅ Secrets are set. Proceeding...
 
-      - name: Setup .kwauth file
+      - name: Authenticate with Klocwork using kwauth
         shell: cmd
         run: |
-          setlocal EnableDelayedExpansion
-          set KWAUTH_DIR=%USERPROFILE%\.klocwork
-
-          if exist "!KWAUTH_DIR!" rmdir /s /q "!KWAUTH_DIR!"
-          mkdir "!KWAUTH_DIR!"
-
-          > "!KWAUTH_DIR!\.kwauth" echo {
-          >> "!KWAUTH_DIR!\.kwauth" echo   "users": [
-          >> "!KWAUTH_DIR!\.kwauth" echo     {
-          >> "!KWAUTH_DIR!\.kwauth" echo       "url": "%KW_URL%",
-          >> "!KWAUTH_DIR!\.kwauth" echo       "user": "%KW_USER%",
-          >> "!KWAUTH_DIR!\.kwauth" echo       "password": "%KW_PASS%"
-          >> "!KWAUTH_DIR!\.kwauth" echo     }
-          >> "!KWAUTH_DIR!\.kwauth" echo   ]
-          >> "!KWAUTH_DIR!\.kwauth" echo }
-
-          echo ✅ .kwauth file created at !KWAUTH_DIR!\.kwauth
+          set PATH=%PATH%;%KLOCWORK_BIN%
+          echo 🔐 Authenticating with Klocwork...
+          "%KLOCWORK_BIN%\kwauth.exe" --url %KW_URL% --user %KW_USER% --password %KW_PASS%
 
       - name: Clean previous Klocwork state
         shell: cmd
@@ -82,7 +68,7 @@ jobs:
           set PATH=%PATH%;%KLOCWORK_BIN%
           cd /d %GITHUB_WORKSPACE%
 
-          echo Cleaning previous build...
+          echo 🧹 Cleaning previous build...
           if exist .kwlp rmdir /s /q .kwlp
           if exist .kwps rmdir /s /q .kwps
           if exist Build rmdir /s /q Build
@@ -91,13 +77,14 @@ jobs:
           if exist %KW_REPORT_NAME%.pdf del /f /q %KW_REPORT_NAME%.pdf
           if exist %KW_REPORT_DIR% rmdir /s /q %KW_REPORT_DIR%
 
-          echo Starting build with kwinject...
-          
+          echo 🏗️ Starting build with kwinject...
+          mkdir Build
+          cd Build
+          cmake ..
           "%KLOCWORK_BIN%\kwinject.exe" make
 
-          echo Running Klocwork static analysis...
+          echo 🔍 Running Klocwork static analysis...
           cd /d %GITHUB_WORKSPACE%
-
           "%KLOCWORK_BIN%\kwcheck.exe" create --url %KW_URL%/%KW_PROJECT%
           "%KLOCWORK_BIN%\kwcheck.exe" set license.host=192.168.0.127 license.port=27000
           "%KLOCWORK_BIN%\kwcheck.exe" run -pd .kwlp -b kwinject.out
