--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -49,32 +49,34 @@ jobs:
           echo ✅ Secrets are set. Proceeding...
 
       - name: Setup .kwauth file for Klocwork auth
-        shell: cmd
+        shell: powershell
         run: |
-          setlocal EnableDelayedExpansion
-          set KWAUTH_DIR=%USERPROFILE%\.klocwork
+          $kwauthPath = "$env:USERPROFILE\.klocwork\.kwauth"
+          $kwauthDir = [System.IO.Path]::GetDirectoryName($kwauthPath)
 
-          echo 🔐 Creating .kwauth for non-interactive login...
-          if exist "!KWAUTH_DIR!" rmdir /s /q "!KWAUTH_DIR!"
-          mkdir "!KWAUTH_DIR!"
+          if (Test-Path $kwauthDir) {
+              Remove-Item -Path $kwauthDir -Recurse -Force
+          }
+          New-Item -ItemType Directory -Path $kwauthDir | Out-Null
 
-          > "!KWAUTH_DIR!\.kwauth" echo {
-          >> "!KWAUTH_DIR!\.kwauth" echo   "users": [
-          >> "!KWAUTH_DIR!\.kwauth" echo     {
-          >> "!KWAUTH_DIR!\.kwauth" echo       "url": "%KW_URL%",
-          >> "!KWAUTH_DIR!\.kwauth" echo       "user": "%KW_USER%",
-          >> "!KWAUTH_DIR!\.kwauth" echo       "password": "%KW_PASS%"
-          >> "!KWAUTH_DIR!\.kwauth" echo     }
-          >> "!KWAUTH_DIR!\.kwauth" echo   ]
-          >> "!KWAUTH_DIR!\.kwauth" echo }
+          $json = @{
+              users = @(
+                  @{
+                      url = "$env:KW_URL"
+                      user = "$env:KW_USER"
+                      password = "$env:KW_PASS"
+                  }
+              )
+          } | ConvertTo-Json -Depth 3
 
-          echo ✅ .kwauth file created and ready.
+          $json | Set-Content -Path $kwauthPath -Encoding UTF8
+          Write-Host "✅ .kwauth file created at $kwauthPath"
 
       - name: Clean previous Klocwork state
         shell: cmd
         run: |
           if exist "%GITHUB_WORKSPACE%\.kwps" rmdir /s /q "%GITHUB_WORKSPACE%\.kwps"
-    
+
       - name: Run Klocwork CLI analysis
         shell: cmd
         run: |
@@ -92,12 +94,11 @@ jobs:
           if exist %KW_REPORT_DIR% rmdir /s /q %KW_REPORT_DIR%
 
           echo Starting build with kwinject...
-        
+         
           "%KLOCWORK_BIN%\kwinject.exe" make
 
           echo Running Klocwork static analysis...
           cd /d %GITHUB_WORKSPACE%
-
           "%KLOCWORK_BIN%\kwcheck.exe" create --url %KW_URL%/%KW_PROJECT%
           "%KLOCWORK_BIN%\kwcheck.exe" set license.host=192.168.0.127 license.port=27000
           "%KLOCWORK_BIN%\kwcheck.exe" run -pd .kwlp -b kwinject.out
